# cmake_project_template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/actions/codeql/: autosar.yml  jpl-standard-pack-1.yml  jpl-standard-pack-2.yml  jpl-standard-pack-3.yml  power-of-10.yml
.github/workflows/: build.yml  c-cpp.yml  codeql.yml
doc/: Doxyfile.in
src/: CMakeLists.txt  main.cpp
src/division/: CMakeLists.txt  division.cpp  division.h
test/: CMakeLists.txt
test/src/: divider_tests.cpp
